avance css menu lateral de pedidos

--- a/src/app/layout/component/dispatch-order/dispatch-order.component.html
+++ b/src/app/layout/component/dispatch-order/dispatch-order.component.html
@@ -1,12 +1,12 @@
-<div class="px-5">
-  <div class="font-bold">Despacho</div>
+<div class="px-5 mb-3">
+  <div class="font-bold text-lg mb-2">Despacho</div>
   <div class="flex flex-row align-items-center">
       <div>
           <span class="material-icons green p-3">store</span>
       </div>
       <div class="flex flex-column">
-          <div class="text-sm font-semibold p-1">{{despacho.TipoDes}}</div>
-          <div class="text-sm font-semibold p-1">{{despacho.Direccion}}</div>
+          <div class="font-semibold p-1 text-sm">{{despacho.TipoDes}}</div>
+          <div class="p-1 text-sm">{{despacho.Direccion}}</div>
       </div>
   </div>
 </div>
