--- a/src/app/layout/component/order-summary/order-summary.component.scss
+++ b/src/app/layout/component/order-summary/order-summary.component.scss
@@ -7,3 +7,12 @@ i {
 .p-card .p-card-content {
     padding: .5rem 0;
 }
+.top_pedido_box{
+	width: 100%;
+	button{
+		background-color: transparent;
+		border: none;
+		color: #FD6435;
+		cursor: pointer;
+	}
+}
