--- a/src/app/layout/component/recent-order-more/recent-order-more.component.html
+++ b/src/app/layout/component/recent-order-more/recent-order-more.component.html
@@ -1,22 +1,22 @@
 <div id="recent-order-wrap">
   <div class="px-3 bg-white top-card-order">
     <div class="flex flex-row w-full align-items-center">
-      <div class="font-bold text-base py-3 text-900">
+      <div class="font-bold text-xl">
         Mis pedidos
       </div>
-      <div class="ml-auto">
+      <div class="ml-auto search-box-top">
         <span class="p-input-icon-left">
-          <i style="color: #00695C; font-weight: 600;" class="pi pi-search"></i>
-          <input class="background p-inputtext-sm" type="text" pInputText placeholder="Search" (keypress)="onSearchRecentOrder($event)"/>
+          <i class="pi pi-search"></i>
+          <input class="inputSearch" type="text" pInputText placeholder="Ingresa el nro. pedido" (keypress)="onSearchRecentOrder($event)"/>
         </span>
       </div>
     </div>
   </div>
-  <div class="flex flex-column p-2 bottom-card-order" style="background-color: #f8faf9">
+  <div class="flex flex-column p-2 bottom-card-order">
     <p-card class="py-1 px-2" *ngFor="let pedido of pedidos">
       <div class="w-full px-3 flex align-items-center">
         <div class="w-full">
-          <div class="inline-block font-bold text-xs p-1 w-auto mb-1" [ngClass]="{
+          <div class="label-info-top inline-block font-bold p-1 w-auto mb-1 uppercase" [ngClass]="{
             unsent: pedido.IDEstado == 1,
             refused: pedido.IDEstado == 2,
             confirmed: pedido.IDEstado == 3,
@@ -41,9 +41,8 @@
                 </div>
               </div>
             </div>
-            <div class="flex flex-column w-1 aling-items-center">
-              <button pButton pRipple type="button" icon="pi pi-arrow-right"
-                class="p-button-rounded p-button-secondary p-button-text m-1" style="color: #0cc2a9"
+            <div class="w-1">
+              <button pButton pRipple type="button" icon="pi pi-arrow-right" class="button_arrow" 
                 (click)="openSideOrderSummary(pedido.IDPedido)"></button>
             </div>
           </div>
