--- a/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
+++ b/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
@@ -1,15 +1,15 @@
 <div class="flex flex-column p-2" style="background-color: #f8faf9">
-  <p-card class="py-1 px-4">
-      <div class="font-bold text-xl text-900 px-3">
+  <p-card class="py-1 px-4 wrp_pedido">
+      <div class="font-bold text-lg p-3">
           Resumen del pedido: {{pedido.PedidoDetalle.length}} productos
       </div>
       <div class="px-3" *ngFor="let pedidoDetalle of pedido.PedidoDetalle">
-          <div class="flex flex-row align-items-center">
-              <img class="h-1 w-1 m-3" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-              <div class="flex flex-column flex-wrap w-7">
+          <div class="flex flex-row align-items-center boder_bt py-2 pr-3">
+              <img class="h-1 w-1 mr-3" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
+              <div class="flex flex-column flex-wrap w-9">
                   <div class="text-sm gray">{{pedidoDetalle.MarcaDes}}</div>
-                  <div class="">{{ pedidoDetalle.Nombre }}</div>
-                  <div class="text-sm gray">{{pedidoDetalle.Cantidad}} {{pedidoDetalle.UnidadMedidaDes}}</div>
+                  <div class="text-base font-bold">{{ pedidoDetalle.Nombre }}</div>
+                  <div class="text-xs gray">{{pedidoDetalle.Cantidad}} {{pedidoDetalle.UnidadMedidaDes}}</div>
               </div>
               <div class="flex flex-column w-3">
                   <div class="font-bold text-right">{{ pedidoDetalle.Precio }}</div>
@@ -18,30 +18,26 @@
                   </div>
               </div>
           </div>
-          <p-divider></p-divider>
       </div>
-      <div class="flex w-full justify-content-end">
-          <div class="flex flex-column justify-content-end w-4">
-              <div class="text-lg font-bold flex flex-row ">
-                  <div class="text-lg font-bold text-right w-6">Subtotal </div>
-                  <div class="text-right w-6 pr-3">{{pedido.SubTotal}}</div>
+      <div class="mt-1 p-3">
+          <div class="Subtotal_box flex flex-column justify-content-end">
+              <div class="pb-3 mb-3 text-lg font-bold flex flex-row boder_bt">
+                  <div class="text-lg font-bold text-right w-9">Subtotal </div>
+                  <div class="text-right w-3 pr-3">{{pedido.SubTotal}}</div>
               </div>
-              <p-divider></p-divider>
-              <div class="text-lg font-bold gray flex flex-row">
-                  <div class="text-lg font-bold text-right w-6">IGV </div>
-                  <div class="text-right w-6 pr-3">{{pedido.IGV}}</div>
+              <div class="pb-3 mb-3 text-lg font-bold gray flex flex-row boder_bt">
+                  <div class="text-lg font-bold text-right w-9">IGV </div>
+                  <div class="text-right w-3 pr-3">{{pedido.IGV}}</div>
               </div>
-              <p-divider></p-divider>
-              <div class="text-lg font-bold gray flex flex-row">
-                <div class="text-lg font-bold text-right w-6">Despacho</div>
-                <div class="text-right w-6 pr-3">{{pedido.DespachoMonto}}</div>
+              <div class="pb-3 mb-3 text-lg font-bold gray flex flex-row boder_bt">
+                <div class="text-lg font-bold text-right w-9">Despacho</div>
+                <div class="text-right w-3 pr-3">{{pedido.DespachoMonto}}</div>
             </div>
-            <p-divider></p-divider>
               <div class="text-lg font-bold purple flex flex-row">
-                  <div class="text-lg font-bold text-right w-6">
+                  <div class="text-lg font-bold text-right w-9">
                       Total
                   </div>
-                  <div class="text-right w-6 pr-3">{{pedido.Total}}</div>
+                  <div class="text-right w-3 pr-3">{{pedido.Total}}</div>
               </div>
           </div>
       </div>
