--- a/src/app/layout/component/order-summary/order-summary.component.html
+++ b/src/app/layout/component/order-summary/order-summary.component.html
@@ -7,6 +7,9 @@
   <div class="text-2xl w-6 flex align-content-center font-bold text-900" style="vertical-align: center">
     <b>Pedido No: {{pedido.Numero}}</b>
   </div>
+  <div>
+    Repetir Pedido
+  </div>
 </div>
 <app-recent-order-detail [pedido]="pedido"></app-recent-order-detail>
 
