--- a/src/app/layout/component/orders/orders.component.html
+++ b/src/app/layout/component/orders/orders.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-row align-items-center my-2 px-5">
     <!-- <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text"></button> -->
     <div class="text-2xl w-6 font-bold text-900 textcenter">
-        Mis pedidos
+        Mis pedidos AAAA
     </div>
     <span class="p-input-icon-left w-6" style="background-color: #eceff1">
         <i class="pi pi-search pr-1" style="color: #046b5e"></i>
