--- a/src/app/layout/component/bag-summary/bag-summary.component.html
+++ b/src/app/layout/component/bag-summary/bag-summary.component.html
@@ -1,24 +1,6 @@
-
-<div class="" style="background-color: #f8faf9">
-    <div *ngIf="termsandcond() == false" class="px-7 pb-4 text-2xl font-bold text-900">
-        Bolsa de compras
-    </div>
-    <div class="flex flex-row mt-1" style="background-color: white" *ngIf="termsandcond()">
-        <div class="flex flex-column w-1 pl-3">
-            <button pButton pRipple type="button" icon="pi pi-arrow-left"
-                class="p-button-rounded p-button-secondary p-button-text" (click)="prev()"></button>
-        </div>
-        <div class="pl-2 pb-4 text-2xl font-bold text-900">
-            Términos y condiciones
-        </div>
-    </div>
-    <div *ngIf="termsandcond() == false" class="pb-4">
-        <p-progressBar class="customProgress" [value]="value"
-            [style]="{ height: '3px', background: '#9C27B0', color: '#ffffff' }"></p-progressBar>
-    </div>
-    <p-steps *ngIf="termsandcond() == false" [model]="items" [readonly]="false" class="stepsBag"></p-steps>
-        <!-- <app-bag-summary></app-bag-summary> -->
-    <!-- <div class="summary-bag-box mt-3 pl-4 pr-4">
+<div>
+	
+	<div class="summary-bag-box mt-3 pl-4 pr-4">
         <div class="py-3 px-3 summary-bag-box-title">
             <span class="font-bold text-base">Bolsa de compras: </span>
             <span class="text-base">Tienes 3 productos</span>
@@ -185,139 +167,6 @@
             </div>
         </div>
 
-
-    </div> -->
-   <!--  <div class="resume-bag-box pl-4 pr-4">
-        <div class="summary-bag-box-title pt-4 pb-4">
-            <span class="font-bold text-base">Resumen del pedido: </span>
-            <span class="font-bold text-base">3 productos selecionados</span>
-        </div>
-        <p-card>
-            <div class="pl-4 pr-4">
-                <div class="resume-item-wrap">
-                    <div class="resume-item col flex mb-2">
-                        <div>
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="col flex flex-column pt-0">
-                            <span class="font-bold text-xs gray">Marca</span>
-                            <span class="text-sm block mt-1 mb-1">Nombre / descripción del producto</span>
-                            <span class="text-xs gray">2 und.</span>
-                            
-                        </div>
-                         <div class="col-3 price-st flex justify-content-end">
-                            <div class="flex flex-column justify-content-end">
-                                <span class="font-bold text-base">S/ 999.00</span>
-                                <span class="text-xs gray line-through flex justify-content-end block mt-1">S/ 1000</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="resume-item col flex mb-2">
-                        <div>
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="col flex flex-column pt-0">
-                            <span class="font-bold text-xs gray">Marca</span>
-                            <span class="text-sm block mt-1 mb-1">Nombre / descripción del producto</span>
-                            <span class="text-xs gray">2 und.</span>
-                            
-                        </div>
-                         <div class="col-3 price-st flex justify-content-end">
-                            <div class="flex flex-column justify-content-end">
-                                <span class="font-bold text-base">S/ 999.00</span>
-                                <span class="text-xs gray line-through flex justify-content-end block mt-1">S/ 1000</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="resume-item col flex mb-2">
-                        <div>
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="col flex flex-column pt-0">
-                            <span class="font-bold text-xs gray">Marca</span>
-                            <span class="text-sm block mt-1 mb-1">Nombre / descripción del producto</span>
-                            <span class="text-xs gray">2 und.</span>
-                            
-                        </div>
-                         <div class="col-3 price-st flex justify-content-end">
-                            <div class="flex flex-column justify-content-end">
-                                <span class="font-bold text-base">S/ 999.00</span>
-                                <span class="text-xs gray line-through flex justify-content-end block mt-1">S/ 1000</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="resume-price">
-                    <div class="border-b">
-                        <div class="flex pb-1">
-                            <div class="col flex justify-content-end">
-                                <span class="font-bold text-base"> Sub Total </span>
-                            </div>
-                            <div class="col-3 pr-3">
-                                <div class="flex justify-content-end">
-                                    <span class="font-bold text-base">S/ 4999.00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-b">
-                        <div class="flex pb-1 pt-1">
-                            <div class="col flex justify-content-end">
-                                <span class="font-bold text-base"> Concepto </span>
-                            </div>
-                            <div class="col-3 pr-3">
-                                <div class="flex justify-content-end">
-                                    <span class="font-bold text-base">S/ 4999.00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="flex pb-1 pt-1">
-                            <div class="col flex justify-content-end">
-                                <span class="font-bold text-base purple"> Total </span>
-                            </div>
-                            <div class="col-3 pr-3">
-                                <div class="flex justify-content-end">
-                                    <span class="font-bold text-base purple">S/ 4999.00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </p-card>
-
-    </div> -->
-    <div class="w-full min-h-full h-full background">
-        <div class="mb-4">
-            <router-outlet name="bag"></router-outlet>
-        </div>
-
-        <div class="px-5" *ngIf="paymentanddelivery()">
-            <p-checkbox name="groupname" value="val1" [(ngModel)]="selectedValues" inputId="terms"></p-checkbox>
-            <label class="pl-3" for="terms">Texto con los
-                <a class="purple font-bold cursor-pointer" (click)="navigateTerms()">términos y condiciones</a>
-                para realizar el pedido</label>
-        </div>
-
-        <div class="flex pt-5 pb-2 flex flex-row background">
-            <button (click)="next()" *ngIf="termsandcond()" pButton pRipple type="button" label="Volver"
-                class="w-3 p-button-rounded p-button-secondary mr-auto p-button-outlined ml-5"
-                style="background-color: #eceff1"></button>
-            <button (click)="next()" *ngIf="termsandcond()" pButton pRipple type="button" label="Aceptar"
-                class="w-3 p-button-rounded p-button-help ml-auto mr-5"></button>
-            <button *ngIf="summary()" pButton pRipple type="button" label="Continuar"
-                class="p-button-rounded p-button-help mr-5 ml-auto" (click)="next()"></button>
-            <button *ngIf="paymentanddelivery()" pButton pRipple type="button" label="Enviar pedido"
-                class="p-button-rounded p-button-secondary px-3 ml-auto mr-5"></button>
-        </div>
 
     </div>
 </div>
