--- a/src/app/layout/component/chat/ng-chat-shop-list/ng-chat-shop-list.component.scss
+++ b/src/app/layout/component/chat/ng-chat-shop-list/ng-chat-shop-list.component.scss
@@ -4,46 +4,61 @@
     font-size: 0.7rem;
 
     .chat-container {
-        width: 240px;
-        height: 360px;
-        border-width: 1px;
-        border-style: solid;
+        width: 320px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
         margin-right: 30px;
         margin-bottom: 60px;
         background-color: white;
-        overflow: auto;
+        border-radius: 10px;       
 
         .message-title {
-            color: rgba(71, 71, 71, 0.349);
             display: block;
             margin-top: 15px;
             margin-left: 15px;
         }
-
+        .chat-shop-message-wrap{
+            height: 450px;
+            overflow: auto;
+            /* width */
+            &::-webkit-scrollbar {
+                width: 3px;
+            }
+                /* Track */
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+            }
+                /* Handle */
+            &::-webkit-scrollbar-thumb {
+                background: #888;
+            }
+              /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: #C5D0E4;
+            }    
+        }
         .chat-shop-message-container {
             display: flex;
-            padding-left: 20px;
-            padding-top: 20px;
-            border-bottom: solid rgb(165, 165, 165) 1px;
+            padding: 15px 20px;
+            border-bottom: 1px solid #e0e0e0;
             vertical-align: middle;
-            cursor: pointer;
+            align-items: center;
 
-            img {
-                width: 30px;
-                height: 30px;
+            cursor: pointer;
+            .img-user-chat{
+                height: 50px;
+                width: 50px;
+                border-radius: 50%;
+                overflow: hidden;
+                img {
+                    width: 100%;
+                    height: auto;
+                }
             }
 
+
             .shop-message-container {
-                display: table;
-                margin-bottom: 10px;
-                width: 150px;
-                height: 30px;
-
                 .message-container {
-                    display: table-cell;
-                    vertical-align: middle;
-
+                    width: 200px;
                     span {
                         display: block;
                         margin-left: 10px;
@@ -63,8 +78,6 @@
             }
 
             .shop-message-container-i {
-                display: table;
-                vertical-align: middle;
                 height: 30px;
                 padding-left: 10px;
 
@@ -84,14 +97,11 @@
     }
 
     .message {
-        font-size: 0.7rem;
-        width: 135px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
     .message-det {
-        font-size: 0.6rem;
         color: rgb(139, 139, 139);
     }
 
